# simsense

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  requirements.txt  setup.py
include/: aggr.h  camera.h  config.h  core.h  cost.h  csct.h  filter.h  lrcheck.h  wta.h
include/simsense/: aggr.h  camera.h  config.h  core.h  cost.h  csct.h  filter.h  lrcheck.h  util.h  wta.h
python/: __init__.py  pysimsense.cpp  pysimsense.cu
python/package/: __init__.py
src/: aggr.cu  camera.cu  core.cu  cost.cu  csct.cu  filter.cu  lrcheck.cu  pyengine.cu  wta.cu
test/: memory.py  performance.py  test1.py  test2.py
